Task 2.2 is fixed